{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 54,
  "lineage": "ae4eb08a-f355-fbfe-5bd3-eb6bbbc0c9b4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-19T21:23:40.344-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye6225-cloudcomputing/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "csye6225-cloudcomputing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "deny_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2024-02-19T21:23:40.220-08:00",
            "deny": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye6225-cloudcomputing/global/firewalls/deny-ssh",
            "log_config": [],
            "name": "deny-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "csye6225-cloudcomputing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/firewalls/deny-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webapp_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-02-19T21:23:40.212-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/csye6225-cloudcomputing/global/firewalls/webapp-firewall",
            "log_config": [],
            "name": "webapp-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "priority": 1000,
            "project": "csye6225-cloudcomputing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/firewalls/webapp-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "mtu": 0,
            "name": "terraform-vpc",
            "project": "csye6225-cloudcomputing",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "webapp_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/csye6225-cloudcomputing/global/routes/route1",
            "name": "route1",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "csye6225-cloudcomputing",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/routes/route1",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.webapp_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "my_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-19T21:23:40.232-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/csye6225-cloudcomputing/regions/us-central1/routers/router1",
            "name": "router1",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "project": "csye6225-cloudcomputing",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/regions/us-central1/routers/router1"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-19T21:23:40.436-08:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/csye6225-cloudcomputing/regions/us-central1/subnetworks/db",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "db",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye6225-cloudcomputing",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/regions/us-central1/subnetworks/db",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "webapp_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-19T21:23:40.318-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/csye6225-cloudcomputing/regions/us-central1/subnetworks/webapp",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "webapp",
            "network": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/global/networks/terraform-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "csye6225-cloudcomputing",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/csye6225-cloudcomputing/regions/us-central1/subnetworks/webapp",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}